sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/External_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Campaign_ID__c</fullName>
    <description>LEM-12800: Clean Up Brief and Brief Item Objects</description>
    <inlineHelpText>If the Mx has an integrated POS system, provide the Mx-provided Campaign reference IDs for this campaign.</inlineHelpText>
    <label>External Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>