sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/External_Facing_Invoice_Notes__c.field-meta.xml
<CustomField>
    <fullName>External_Facing_Invoice_Notes__c</fullName>
    <description>LEM-2983: Captures the product description to be added in the manual invoice.</description>
    <inlineHelpText>If this product requires a manual invoice, please provide the product description to be included on this invoice here.</inlineHelpText>
    <label>External-Facing Invoice Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>