sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Figma_Template__c.field-meta.xml
<CustomField>
    <fullName>Figma_Template__c</fullName>
    <description>LEM-13267 - DPEI Brief Item Generation</description>
    <label>Figma Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>