sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Flat_Discount_for_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Flat_Discount_for_Consumer__c</fullName>
    <description>LEM-2983: Captures the flat discount for the consumer.</description>
    <inlineHelpText>This field reflects the flat discount offered to the consumer either via an order discount or free delivery.</inlineHelpText>
    <label>Flat Discount for Consumer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>