sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Free_Item_Name_s__c.field-meta.xml
<CustomField>
    <fullName>Free_Item_Name_s__c</fullName>
    <description>LEM-13636 - Store Rewards Brief Item. LEM-18567 - Rename Free Item Name(s).</description>
    <inlineHelpText>Please add the Menu Item ID and Name of the Free Item here. If the list is long, please add a link to a spreadsheet with Menu Item IDs and Names</inlineHelpText>
    <label>Free Item Name(s) &amp; ID(s)</label>
    <type>TextArea</type>
</CustomField>