sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Holdout_Audience_Experiment__c.field-meta.xml
<CustomField>
    <fullName>Holdout_Audience_Experiment__c</fullName>
    <description>LEM-2983: Checked if the Campaign has a Holdout Experiment.</description>
    <inlineHelpText>Detail whether the campaign has a holdout/audience experiment. Recommendation is &apos;Yes&apos; as this allows for A/B test reporting.</inlineHelpText>
    <label>Holdout/Audience Experiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>