sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Holdout_Size__c.field-meta.xml
<CustomField>
    <fullName>Holdout_Size__c</fullName>
    <description>LEM-2983: Captures the percentage of Holdout for the Brief Item.</description>
    <inlineHelpText>Provide the audience holdout size here (recommended/standard holdout is 5%) if applicable.</inlineHelpText>
    <label>Holdout Size</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>