sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Homepage_Offers_Hub_Banner_Content_ID__c.field-meta.xml
<CustomField>
    <fullName>Homepage_Offers_Hub_Banner_Content_ID__c</fullName>
    <description>LEM-5421</description>
    <inlineHelpText>Provide the Homepage/Offers Hub Banner content ID here.</inlineHelpText>
    <label>Home Page / Offers Hub Banner Content ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>