sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/In_Campaign_Change__c.field-meta.xml
<CustomField>
    <fullName>In_Campaign_Change__c</fullName>
    <description>LEM-9346: Fixing the Process for In-Campaign Changes</description>
    <label>In-Campaign Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes-Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>