sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Incremental_Marketing_Fee_Redemption__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Marketing_Fee_Redemption__c</fullName>
    <description>LEM-2983: Captures the marketing fee for every redemption.
LEM-9346: APEX - Fixing the Process for In-Campaign Changes</description>
    <inlineHelpText>Provide the incremental marketing fee per redemption here (typically $0.99). If this fee is waived, input $0.00.</inlineHelpText>
    <label>Incremental Marketing Fee per Redemption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>