sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Incremental_Marketing_Fee_Redemption_Val__c.field-meta.xml
<CustomField>
    <fullName>Incremental_Marketing_Fee_Redemption_Val__c</fullName>
    <description>LEM-6823
LEM-9346: APEX - Fixing the Process for In-Campaign Changes</description>
    <formula>IF( ISBLANK(Quote_Line__r.Marketing_Flat_Fee__c) , 0, Quote_Line__r.Marketing_Flat_Fee__c)</formula>
    <inlineHelpText>Captures the marketing fee for every redemption.</inlineHelpText>
    <label>ZIncremental Marketing Fee/Redemption</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>