sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Influencer_Campaign_Platforms__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Campaign_Platforms__c</fullName>
    <inlineHelpText>LEM-13267 DPEI Brief Item Generation</inlineHelpText>
    <label>Influencer Campaign Platforms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Social_Media</valueSetName>
    </valueSet>
</CustomField>