sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Influencer_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Campaigns__c</fullName>
    <description>LEM-15296: DPEI Incentives Fields</description>
    <formula>TEXT(Quote_Line__r.SBQQ__Quote__r.Influencer_Campaigns__c)</formula>
    <label>Influencer Campaigns</label>
    <type>Text</type>
</CustomField>