sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Invoice_Audited__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Audited__c</fullName>
    <description>LEM-2983: Helps denote if the Brief invoice has been audited or not.</description>
    <label>Invoice Audited</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes - approved</fullName>
            </value>
            <value>
                <fullName>Yes - needs correction</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>