sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Is_Created_By_System__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_By_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3674: Is it used to indicate if the Brief Item has been created by the system.</description>
    <label>Is Created By System</label>
    <type>Checkbox</type>
</CustomField>