sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Is_there_a_Promo_Budget_Cap__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_Promo_Budget_Cap__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <inlineHelpText>Indiciate whether the promo campaign has a budget cap or not.</inlineHelpText>
    <label>Is there a Promo Budget Cap?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>