sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Is_this_a_Complex_Deal__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Complex_Deal__c</fullName>
    <description>Created as part of LEM-6483
LEM-9346: APEX - Fixing the Process for In-Campaign Changes</description>
    <formula>TEXT(Quote_Line__r.Is_this_a_CPG_Complex_Deal__c)</formula>
    <label>ZIs this a Complex Deal?</label>
    <type>Text</type>
</CustomField>