sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Is_this_a_Complex_Deal_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Complex_Deal_Picklist__c</fullName>
    <description>LEM-9346: APEX - Fixing the Process for In-Campaign Changes</description>
    <label>Is this a Complex Deal?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>