sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Item_Description_Details__c.field-meta.xml
<CustomField>
    <fullName>Item_Description_Details__c</fullName>
    <description>LEM-13267 - DPEI Brief Item Generation</description>
    <label>Item Description/Details</label>
    <type>TextArea</type>
</CustomField>