sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Item_IDs_Matching_Store_IDs__c.field-meta.xml
<CustomField>
    <fullName>Item_IDs_Matching_Store_IDs__c</fullName>
    <description>LEM-2983: Captures the list of item Ids.</description>
    <inlineHelpText>Visit the Item Promotions wiki for guidance on what info to provide. URL: https://doordash.atlassian.net/wiki/spaces/APW/pages/2780332882/Item+Promotions+Resource</inlineHelpText>
    <label>Item IDs &amp; Matching Store IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>