sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Item_Level_Promo_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Level_Promo_Type__c</fullName>
    <description>Created as part of LEM-6483</description>
    <label>Item Level Promo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mix &amp; Match (Multi SKU)</fullName>
            </value>
            <value>
                <fullName>Single SKU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>