sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <description>LEM-13267 - DPEI Brief Item Generation</description>
    <inlineHelpText>List out a single menu item the Mx would like to run as a DPEI. If requesting multiple DPEIs, please add each DPEI as a new product</inlineHelpText>
    <label>Item Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>