sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <description>LEM-13267 - DPEI Brief Item Generation</description>
    <inlineHelpText>Choose the item type that best characterises the potential DPEI</inlineHelpText>
    <label>Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limited Time Only Menu Item / Limited Time Offer (LTO)</fullName>
            </value>
            <value>
                <fullName>Bundle / Combo</fullName>
            </value>
            <value>
                <fullName>Menu Hack</fullName>
            </value>
            <value>
                <fullName>Permanent New Menu Item</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>