sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/JIRA_Ticket__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Ticket__c</fullName>
    <description>LEM-2983: Captures JIRA Ticket number associated with the custom configuration product.</description>
    <inlineHelpText>If the custom product is a Branded Collection, please provide the associated JIRA ticket.</inlineHelpText>
    <label>JIRA Ticket</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>