sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Landing_Page_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Landing_Page_Subtitle__c</fullName>
    <description>LEM-9349: Minor Field Addition to Brief Item</description>
    <inlineHelpText>This will appear on the landing page of Sponsored Brand</inlineHelpText>
    <label>Landing Page Subtitle</label>
    <length>90</length>
    <type>Text</type>
</CustomField>