sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Latest_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Report_Date__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <label>Latest Report Date</label>
    <type>Date</type>
</CustomField>