sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Link_to_CRM_Influencer_Creative_Assets__c.field-meta.xml
<CustomField>
    <fullName>Link_to_CRM_Influencer_Creative_Assets__c</fullName>
    <description>LEM-13267 - DPEI Brief Item Generation</description>
    <inlineHelpText>Add in links in the relevant asset fields to the correctly sized item photos and any other create assets that will be needed to launch the item. Photos must follow regular menu guidelines of “Item image URL in JPG|JPEG|PNG format, min resolution (1600w x 800h), aspect ratio 16:9 and max size 2MB”</inlineHelpText>
    <label>Link to CRM/Influencer Creative Assets</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>