sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Link_to_Report__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Report__c</fullName>
    <description>LEM-5110: To improve the Brief Item process.</description>
    <label>Link to Report</label>
    <type>Url</type>
</CustomField>