sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Marketing_Trial_Credits__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Trial_Credits__c</fullName>
    <description>LEM-2983: Captures the Marketing Trial Credits.</description>
    <inlineHelpText>This field reflects the amount of marketing trial credits offered to the Merchant.</inlineHelpText>
    <label>ZMarketing Trial Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>