sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Marketing_Trial_Credits_Val__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Trial_Credits_Val__c</fullName>
    <description>LEM-6823</description>
    <formula>Quote_Line__r.Marketing_Trial_Credit__c</formula>
    <inlineHelpText>Captures Attributes related to Promotion products</inlineHelpText>
    <label>Marketing Trial Credits Per Store</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>