sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Max_Discount_for_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_for_Consumer__c</fullName>
    <description>LEM-2983: Captures the maximum discount for the consumer.</description>
    <inlineHelpText>This field reflects the max discount offered to the consumer.</inlineHelpText>
    <label>Max Discount for Consumer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>