sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Max_Number_of_Redemptions_per_Cart__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_of_Redemptions_per_Cart__c</fullName>
    <description>LEM-5110: To improve the Brief Item process. LEM-17471: Updated the datatype of the field to number</description>
    <inlineHelpText>Provide the max number of times the promo can be redeemed within a single order.</inlineHelpText>
    <label>Max Number of Redemptions per Cart</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>