sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Max_Number_of_Redemptions_per_Cx__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_of_Redemptions_per_Cx__c</fullName>
    <description>LEM-2983: Captures the max number of redemptions per customer, LEM-17972: Updated the datatype of the field to number.</description>
    <inlineHelpText>Provide the max number of redemptions permitted per customer for the campaign.</inlineHelpText>
    <label>Max Number of Redemptions per Cx</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>