sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Max_Redemption_Cap__c.field-meta.xml
<CustomField>
    <fullName>Max_Redemption_Cap__c</fullName>
    <description>LEM-2983: Captures the Max Redemption Cap associated with Campaign Item.
LEM-12181 - Update Max Number of Redemptions to ‘Overall Max Number of Redemptions’</description>
    <label>Overall Max Number of Redemptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>