sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Maximum_Banner_Fee__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Banner_Fee__c</fullName>
    <description>LEM-2983: Captures the maximum banner fee of the Campaign Item.</description>
    <inlineHelpText>Provide the maximum amount the Mx is charged for the banner</inlineHelpText>
    <label>Maximum Banner Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>