sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Menu_Item_Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Menu_Item_Minimum_Quantity__c</fullName>
    <description>LEM-3674: It indicates the minimum quantity of Menu Item.</description>
    <label>Menu Item Minimum Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>