sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Merchant_DRIs_Approvers__c.field-meta.xml
<CustomField>
    <fullName>Merchant_DRIs_Approvers__c</fullName>
    <description>LEM-13267 - DPEI Brief Item Generation</description>
    <inlineHelpText>Please enter the Mx DRIs names and e-mail addresses about who will approve / provide feedback on each of our line items - cofunding, influencer, social, copy, images/video)</inlineHelpText>
    <label>Merchant DRIs &amp; Approvers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>