sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Minimum_Banner_Fee__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Banner_Fee__c</fullName>
    <description>LEM-2983: Captures the minimum banner fee for the campaign item.</description>
    <inlineHelpText>Provide the minimum amount the Mx will charged for the banner</inlineHelpText>
    <label>Minimum Banner Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>