sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Minimum_Cart_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Cart_Subtotal__c</fullName>
    <description>LEM-2983: Captures the minimum cart subtotal.</description>
    <label>Minimum Cart Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>