sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Minimum_Spend_Per_Order__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Spend_Per_Order__c</fullName>
    <description>LEM-13636 - Store Rewards Brief Item</description>
    <label>Minimum Spend ($) Per Order</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>