sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Netsuite_ID__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_ID__c</fullName>
    <description>LEM-10467: Tracking Two Briefs as One Uniform Campaign</description>
    <label>Netsuite ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>