sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Number_of_Campaign_Setup_Errors_Found__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Campaign_Setup_Errors_Found__c</fullName>
    <description>LEM-2983: Captures the number of setup errors occurred related to the Brief Item.</description>
    <inlineHelpText>Provide the number of campaign setup errors found for this product.</inlineHelpText>
    <label>Number of Campaign Setup Errors Found</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>