sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Number_of_Submission_Errors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Submission_Errors__c</fullName>
    <description>LEM-9491</description>
    <inlineHelpText>Detail the number of errors made by Sales in their initial Brief Item submission.</inlineHelpText>
    <label>Number of Submission Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>