sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Number_of_Testing_Errors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Testing_Errors__c</fullName>
    <description>LEM-9491</description>
    <label>Number of Testing Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>