sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Offer_Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Offer_Detailed_Description__c</fullName>
    <description>LEM-3674: It stores the description of the offer.</description>
    <inlineHelpText>Indicate the details of the product here.</inlineHelpText>
    <label>Offer Detailed Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>