sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Offsite_Banner_Type__c.field-meta.xml
<CustomField>
    <fullName>Offsite_Banner_Type__c</fullName>
    <description>LEM-17971: Brief Item Fields for Offsite Ad Product</description>
    <inlineHelpText>This field is applicable to Trade Desk offsite ad campaigns only. Select the offsite banner type applicable to the campaign.</inlineHelpText>
    <label>Offsite Banner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Offsite_Banner_Type</valueSetName>
    </valueSet>
</CustomField>