sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Offsite_Cx_Targeting_Type__c.field-meta.xml
<CustomField>
    <fullName>Offsite_Cx_Targeting_Type__c</fullName>
    <description>LEM-17971: Brief Item Fields for Offsite Ad Product</description>
    <inlineHelpText>Indicate the target Cx audience of the offsite ad as applicable.</inlineHelpText>
    <label>Offsite Cx Targeting Type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>