sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID__c</fullName>
    <description>LEM-5229: It is used to store the Id of the Opportunity associated with the Quote Line.</description>
    <formula>CASESAFEID(Quote_Line__r.SBQQ__Quote__r.SBQQ__Opportunity2__c)</formula>
    <label>Opportunity ID</label>
    <type>Text</type>
</CustomField>