sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-2983: Captures the owner of the Opportunity related to the parent Brief.</description>
    <label>Opportunity Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brief_Items</relationshipName>
    <type>Lookup</type>
</CustomField>