sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Ops_Owner__c.field-meta.xml
<CustomField>
    <fullName>Ops_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-3674: It is used to store campaign fulfilment owner details related to the Brief Item.</description>
    <inlineHelpText>Indicate the campaign fulfilment owner of the campaign item here.</inlineHelpText>
    <label>Ops Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Brief_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>