sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Ops_Working_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Ops_Working_Sheet__c</fullName>
    <description>Created as part of LEM-6483</description>
    <label>Ops Working Sheet</label>
    <type>Url</type>
</CustomField>