sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <description>LEM-3539: It indicates the campaign package decided on basis of Quote Line Item&apos;s Product.</description>
    <label>Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>