sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Paid_Social_Whitelisting__c.field-meta.xml
<CustomField>
    <fullName>Paid_Social_Whitelisting__c</fullName>
    <description>LEM-15296: DPEI Incentives Fields</description>
    <formula>TEXT(Quote_Line__r.SBQQ__Quote__r.Paid_Social_Whitelisting__c)</formula>
    <label>Paid Social / Whitelisting</label>
    <type>Text</type>
</CustomField>