sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Payment_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Payment_Protocol__c</fullName>
    <description>LEM-2983: Captures the Payment Protocol associated with the Brief Item</description>
    <label>Payment Protocol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>Withholding</fullName>
            </value>
            <value>
                <fullName>Marketing Fund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>