sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Percent_of_ConsumerDisc_or_Fee_Mx_Funded__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_ConsumerDisc_or_Fee_Mx_Funded__c</fullName>
    <description>LEM-2983: Captures the % of the consumer discount that is Mx-funded here.</description>
    <inlineHelpText>Provide the % of the consumer discount that is Mx-funded here.</inlineHelpText>
    <label>% of Consumer Discount Mx-Funded</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>