sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Percent_of_Fee_to_Invoice_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Fee_to_Invoice_Merchant__c</fullName>
    <description>LEM-3674: It stores the percentage of fee to be invoiced to the Merchant.
LEM-9346: APEX - Fixing the Process for In-Campaign Changes</description>
    <label>% of Fee to Invoice Advertiser</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>