sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Percent_of_Fee_to_Invoice_Merchant_val__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Fee_to_Invoice_Merchant_Val__c</fullName>
    <description>LEM-6823
LEM-9346: APEX - Fixing the Process for In-Campaign Changes</description>
    <formula>Quote_Line__r.Percent_of_Fee_to_Invoice_Merchant__c</formula>
    <inlineHelpText>Stores the percentage of the fee to be invoiced to the Merchant.</inlineHelpText>
    <label>Z% of Fee to Invoice Advertiser</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>