sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Percentof_Consumer_DiscFee_DD_Funded__c.field-meta.xml
<CustomField>
    <fullName>Percentof_Consumer_DiscFee_DD_Funded__c</fullName>
    <description>LEM-2983: Captures the % of the consumer discount that is DD-funded here.</description>
    <inlineHelpText>Provide the % of the consumer discount that is DD-funded here.</inlineHelpText>
    <label>% of Consumer Discount  DD-Funded</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>