sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Percentof_ConsumerDiscFee_Contra_Funded__c.field-meta.xml
<CustomField>
    <fullName>Percentof_ConsumerDiscFee_Contra_Funded__c</fullName>
    <description>LEM-2983: Captures the % of the consumer discount that is contra-funded here.</description>
    <inlineHelpText>Provide the % of the consumer discount that is contra-funded here.</inlineHelpText>
    <label>% of Consumer Discount Contra-Funded</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>