sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Post_Live_QA_Bulleted_Errors__c.field-meta.xml
<CustomField>
    <fullName>Post_Live_QA_Bulleted_Errors__c</fullName>
    <description>LEM-3674: It is used to stores the errors that occurred after go live of the Brief Item.</description>
    <inlineHelpText>Describe any errors found as part of the Post-Live QA process.</inlineHelpText>
    <label>Post-Live QA Bulleted Errors</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>