sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Post_Live_QA_Number_of_Errors_Found__c.field-meta.xml
<CustomField>
    <fullName>Post_Live_QA_Number_of_Errors_Found__c</fullName>
    <description>LEM-3674: It indicates the number of errors found after go-live.</description>
    <label>Post-Live QA Number of Errors Found</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>