sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Pre_Live_Bulleted_Fixes__c.field-meta.xml
<CustomField>
    <fullName>Pre_Live_Bulleted_Fixes__c</fullName>
    <description>LEM-3674: It stores the bulleted fixes made before the Brief Item went live.</description>
    <inlineHelpText>Describe any corrections made as part of the Pre-Live QA process.</inlineHelpText>
    <label>Pre-Live Bulleted Fixes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>