sfdx-source/force-app/main/default/objects/Brief_Item__c/fields/Pre_Live_Number_of_Errors_Found__c.field-meta.xml
<CustomField>
    <fullName>Pre_Live_Number_of_Errors_Found__c</fullName>
    <description>LEM-3674: It indicates the number of errors found before Brief Item goes live.</description>
    <label>Pre-Live Number of Errors Found</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>